--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           
             <a href="https://github.com/Yashds691543/Salary-Analysis-Python" target="_blank" rel="noopener noreferrer">
             <img src="images/salary.png" alt="Salary Analysis Project logo">            
-            <span>Salary Analysis Project(Python)</span>
+            <span>Salary Analysis (Python)</span>
             </a>
 
             <a href="https://github.com/Yashds691543/Multivariate-Project-R-Code" target="_blank" rel="noopener noreferrer">
@@ -176,6 +176,11 @@
                   <a href="https://github.com/Yashds691543/Bio-Statistical-Project-2-SAS-Code" target="_blank" rel="noopener noreferrer">
                     <img src="images/bio.png" alt="Bio Statistical Methods Project logo">            
                     <span>Bio Statistical Methods Project(SAS-Code)</span>
+                    </a>
+		    
+		    <a href="https://github.com/Yashds691543/Project-on-Diabetes-Data-Analysis" target="_blank" rel="noopener noreferrer">
+                    <img src="images/diabetes.png" alt="Project on Diabetes Data Analysis logo">            
+                    <span>Diabetes Data Analysis(Python)</span>
                     </a>
           </div>
 
