--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
        <section id="Projects" class = " Projects">
         <h2>Projects:</h2>
         <div class="text">
-       "Rational data analyst with a proven track record in diverse projects, including developing a web search engine for the University of Memphis, designing a machine learning model to predict phishing attacks, and enhancing winery sales efficiency through a comprehensive database management system. Led an R-based initiative to forecast energy consumption in the steel industry. Expertise in data collection, transformation, and organization, with strong skills in data cleaning, visualization, and R programming. Adept at data-driven decision-making, SQL, Excel, and delivering effective presentations. Each project honed my skills in data analysis, machine learning, and web development". These are some of my best projects: 
+       "Rational data analyst with a proven track record in diverse projects, including developing a Inform/web search engine for the University of Memphis using Python, designing a machine learning model to predict phishing attacks, and enhancing winery sales efficiency through a comprehensive database management system. Led an R-based initiative to forecast energy consumption in the steel industry. Expertise in data collection, transformation, and organization, with strong skills in data cleaning, visualization, and R programming. Adept at data-driven decision-making, SQL, Excel, and delivering effective presentations. Each project honed my skills in data analysis, machine learning, and web development". These are some of my best projects: 
         </div>
 
       
