--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
                     <img src="images/diabetes.png" alt="Project on Diabetes Data Analysis logo">            
                     <span>Diabetes Data Analysis(Python)</span>
                     </a>
+		    
+		     <a href="https://github.com/Yashds691543/Trip-Data-Analysis" target="_blank" rel="noopener noreferrer">
+                    <img src="images/trip.png" alt="Project on Trips Data Analysis logo">            
+                    <span>Trips Data Analysis(R-Code)</span>
+                    </a>
           </div>
 
         </div>
