--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
         <div class="group">
 
           <div class="projectdetails">
+
+	    <a href="https://github.com/Yashds691543/Inform-Retrival-And-Web-Search" target="_blank" rel="noopener noreferrer">
+            <img src="images/websearch.png" alt="INFORM RETRIVAL / WEB SEARCH logo">            
+            <span>INFORM RETRIVAL / WEB SEARCH (Python)</span>
+            </a>
+		  
             <a href="https://github.com/Yashds691543/Insurance-Cost-Estimation-Python" target="_blank" rel="noopener noreferrer">
             <img src="images/insurance.png" alt="Insurance Cost Estimation Project logo">
             <span>Insurance Cost Estimation Project(Python)</span>
@@ -165,15 +171,25 @@
                 <img src="images/porfolio.png" alt="Portfolio Project">            
                 <span>Portfolio Project(HTML)</span>
                 </a>
+		
+		<a href="https://github.com/Yashds691543/movie-data-analysis" target="_blank" rel="noopener noreferrer">
+                  <img src="images/lens.png" alt="Movie Lens Project logo">            
+                  <span>Movie Lens Project(Python)</span>
+                  </a>
 
                 <a href="https://github.com/Yashds691543/Harvestify-Project-Python-Code" target="_blank" rel="noopener noreferrer">
-                  <img src="images/harvest.png" alt="Harvestify Projectlogo">            
+                  <img src="images/harvest.png" alt="Harvestify Project logo">            
                   <span>Harvestify Project(Python,HTML,JavaScript)</span>
                   </a>
 
                   <a href="https://github.com/Yashds691543/Bio-Statistical-Project-2-SAS-Code" target="_blank" rel="noopener noreferrer">
                     <img src="images/bio.png" alt="Bio Statistical Methods Project logo">            
                     <span>Bio Statistical Methods Project(SAS-Code)</span>
+                    </a>
+
+		    <a href="https://github.com/Yashds691543/Business-Machine-learning-Project" target="_blank" rel="noopener noreferrer">
+                    <img src="images/machine.png" alt="Business Machine Learning Projectlogo">            
+                    <span>Business Machine Learning Project(R-Code)</span>
                     </a>
 		    
 		    <a href="https://github.com/Yashds691543/Project-on-Diabetes-Data-Analysis" target="_blank" rel="noopener noreferrer">
