--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <section>
       <i class="fa-solid fa-location-dot"></i>
       <h3>Location</h3>
-      <p>Memphis, TN 38111</p>
+      <p>Cleveland, OH 44114</p>
     
   </section>
 </section>
