--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
            <a href="https://coursera.org/share/2b8e4d9c9f6a0611c79d0424f5834436" target="_blank" rel="noopener noreferrer">
                     <img src="images/certification.png" alt="Google Data Analytics Professional logo">            
                     <span>Google Data Analytics Professional Certification</span>
-                    </a>          <div class="links">
+                    </a>       
+		 <a href="https://www.coursera.org/account/accomplishments/verify/BWUAVWD4HH6F" target="_blank" rel="noopener noreferrer">
+                    <img src="images/ai.png" alt="Google AI Essentials logo">            
+                    <span>Google AI Essentials Certification</span>
+                    </a>   
+		<div class="links">
             <a href="#skills">
               <i class="fa-solid fa-code"></i>
               <span>Skills</span>
