--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 <span>Github</span>
 </a>
 
-<a href="https://www.linkedin.com/in/yashwantejdyavarishetty/" target="_blank" rel="noopener noreferrer">
+<a href="https://www.linkedin.com/in/yashwantanalyst/" target="_blank" rel="noopener noreferrer">
 <i class="fa-brands fa-linkedin"></i>
 <span>LinkedIN</span>
 </a>
 
-<a href="https://drive.google.com/file/d/1UcSW6L78Fg9epkwg7zP7fWimqw_6Z7BP/view?usp=sharing" target="_blank" rel="noopener noreferrer">
+<a href="https://docs.google.com/document/d/1DJnpwq3Xo7vFJpPjmJDsi5X_kuaA4WgL/edit?usp=sharing&ouid=116192635884969996119&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">
   <i class="fa-regular fa-id-card"></i>
   <span>Resume</span>
 </a>
