--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <span>LinkedIN</span>
 </a>
 
-<a href="https://docs.google.com/document/d/1DJnpwq3Xo7vFJpPjmJDsi5X_kuaA4WgL/edit?usp=sharing&ouid=116192635884969996119&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">
+<a href="https://drive.google.com/file/d/1xhLFjEhai8dqhqQq8SMnBS-iu1wfRaGY/view?usp=sharing" target="_blank" rel="noopener noreferrer">
   <i class="fa-regular fa-id-card"></i>
   <span>Resume</span>
 </a>
